# music_gengre_class

./: .pre-commit-config.yaml  LICENSE  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
data/: .gitignore  music.dvc
music_genre_class/: dataset.py  infer.py  model.py  train.py
