[tool.poetry]
name = "music_genre_class"
version = "0.1.0"
description = ""
authors = ["NickKar30 <nick_kar_30@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = "^2.1.2"
matplotlib = "^3.8.2"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pandas = "^2.1.4"
pytorch-lightning = "^2.1.3"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
scikit-learn = "^1.3.2"
torchmetrics = "^1.2.1"
hydra-core = "^1.3.2"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
dvc = "^3.38.1"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.6.0"
librosa = "^0.10.1"
mlflow = "^2.9.2"
dvc-gdrive = "^3.0.1"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["music_genre_class"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
